# vlitz

./: Cargo.toml  README.md
.cursor/rules/: main.mdc
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  repl.rs
core/: Cargo.toml
core/src/: command.rs  executor.rs  lib.rs  navigator.rs  store.rs
preset/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: frida.rs  lib.rs  script.rs  session.rs
script/: Cargo.toml
script/src/: executor.rs  lib.rs  parser.rs
shared/: Cargo.toml
shared/src/: error.rs  filter.rs  lib.rs  memory.rs  utils.rs  vzdata.rs
src/: main.rs
