[package]
name = "vlitz"
version = "0.1.0"
edition = "2021"
authors = ["VLITZ Team"]
description = "Frida 기반 CLI 동적 디버거"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
colored = "2.0"
frida-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.9"
nom = "7.1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
log = "0.4"
env_logger = "0.10"
num-traits = "0.2"
num-derive = "0.4"
lazy_static = "1.4"

[workspace]
members = [
    "cli",
    "core",
    "script",
    "preset",
    "runtime",
    "shared",
] 