[package]
name = "vlitz-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
vlitz-core = { path = "../core" }
vlitz-runtime = { path = "../runtime" }
vlitz-shared = { path = "../shared" }
rustyline = "12.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
log = "0.4" 