[package]
name = "vlitz-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
regex = "1.9"
num-traits = "0.2"
num-derive = "0.4"
colored = "2.0"
log = "0.4" 